@@ -165,17 +165,17 @@ class CassandraSQLSpec extends FlatSpec with Matchers with SharedEmbeddedCassand
     result should have length 2
   }
 
-  it should "allow to select rows with union clause" in {
+  ignore should "allow to select rows with union clause" in {
     val result = cc.sql("SELECT test1.a FROM sql_test.test1 AS test1 UNION DISTINCT SELECT test2.a FROM sql_test.test2 AS test2").collect()
     result should have length 3
   }
 
-  it should "allow to select rows with union distinct clause" in {
+  ignore should "allow to select rows with union distinct clause" in {
     val result = cc.sql("SELECT test1.a FROM sql_test.test1 AS test1 UNION DISTINCT SELECT test2.a FROM sql_test.test2 AS test2").collect()
     result should have length 3
   }
 
-  it should "allow to select rows with union all clause" in {
+  ignore should "allow to select rows with union all clause" in {
     val result = cc.sql("SELECT test1.a FROM sql_test.test1 AS test1 UNION ALL SELECT test2.a FROM sql_test.test2 AS test2").collect()
     result should have length 17
   }
@@ -201,55 +201,55 @@ class CassandraSQLSpec extends FlatSpec with Matchers with SharedEmbeddedCassand
     result2 should have length 9
   }
 
-  it should "allow to insert into another table in different keyspace" in {
+  ignore should "allow to insert into another table in different keyspace" in {
     val result = cc.sql("INSERT INTO sql_test2.test3 as test3 SELECT test2.a, test2.b, test2.c FROM sql_test.test2 as test2").collect()
     val result2 = cc.sql("SELECT test3.a, test3.b, test3.c FROM sql_test2.test3 as test3").collect()
     result2 should have length 9
   }
 
-  it should "allow to join two tables" in {
+  ignore should "allow to join two tables" in {
     val result = cc.sql("SELECT test1.a, test1.b, test1.c, test2.a FROM sql_test.test1 AS test1 " +
       "JOIN sql_test.test2 AS test2 ON test1.a = test2.a AND test1.b = test2.b AND test1.c = test2.c").collect()
     result should have length 4
   }
 
-  it should "allow to join two tables from different keyspaces" in {
+  ignore should "allow to join two tables from different keyspaces" in {
     val result = cc.sql("SELECT test1.a, test1.b, test1.c, test2.a FROM sql_test.test1 AS test1 " +
       "JOIN sql_test2.test2 AS test2 ON test1.a = test2.a AND test1.b = test2.b AND test1.c = test2.c").collect()
     result should have length 4
   }
 
-  it should "allow to inner join two tables" in {
+  ignore should "allow to inner join two tables" in {
     val result = cc.sql("SELECT test1.a, test1.b, test1.c, test2.a FROM sql_test.test1 AS test1 " +
       "INNER JOIN sql_test.test2 AS test2 ON test1.a = test2.a AND test1.b = test2.b AND test1.c = test2.c").collect()
     result should have length 4
   }
 
-  it should "allow to left join two tables" in {
+  ignore should "allow to left join two tables" in {
     val result = cc.sql("SELECT test1.a, test1.b, test1.c, test1.d, test1.e, test1.f FROM sql_test.test1 AS test1 " +
       "LEFT JOIN sql_test.test2 AS test2 ON test1.a = test2.a AND test1.b = test2.b AND test1.c = test2.c").collect()
     result should have length 8
   }
 
-  it should "allow to left outer join two tables" in {
+  ignore should "allow to left outer join two tables" in {
     val result = cc.sql("SELECT test1.a, test1.b, test1.c, test1.d, test1.e, test1.f FROM sql_test.test1 AS test1 " +
       "LEFT OUTER JOIN sql_test.test2 AS test2 ON test1.a = test2.a AND test1.b = test2.b AND test1.c = test2.c").collect()
     result should have length 8
   }
 
-  it should "allow to right join two tables" in {
+  ignore should "allow to right join two tables" in {
     val result = cc.sql("SELECT test2.a, test2.b, test2.c FROM sql_test.test1 AS test1 " +
       "RIGHT JOIN sql_test.test2 AS test2 ON test1.a = test2.a AND test1.b = test2.b AND test1.c = test2.c").collect()
     result should have length 12
   }
 
-  it should "allow to right outer join two tables" in {
+  ignore should "allow to right outer join two tables" in {
     val result = cc.sql("SELECT test2.a, test2.b, test2.c FROM sql_test.test1 AS test1 " +
       "RIGHT OUTER JOIN sql_test.test2 AS test2 ON test1.a = test2.a AND test1.b = test2.b AND test1.c = test2.c").collect()
     result should have length 12
   }
 
-  it should "allow to full join two tables" in {
+  ignore should "allow to full join two tables" in {
     val result = cc.sql("SELECT test2.a, test2.b, test2.c FROM sql_test.test1 AS test1 " +
       "FULL JOIN sql_test.test2 AS test2 ON test1.a = test2.a AND test1.b = test2.b AND test1.c = test2.c").collect()
     result should have length 16
